# racoonsmeal-backend

./: .gitignore  .gitmodules  main.py  pyproject.toml
nutrition-modling/: README.md  main.py  pyproject.toml  sample_gen.py  train.py  usersdata_13_30.csv
racoonsmeal-backend/: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
racoonsmeal-backend/prod/: dockerfile  entrypoint.sh  prod.yml
racoonsmeal-backend/prod/nginx/: default.conf
racoonsmeal-backend/prod/nginx/sites-enabled/: myproject.conf
racoonsmeal-backend/src/: db.sqlite3
racoonsmeal-backend/src/apps/planner/: admin.py  apps.py  models.py  signals.py  util.py
racoonsmeal-backend/src/apps/planner/migrations/: 0001_initial.py  0002_initial.py
racoonsmeal-backend/src/apps/users/: models.py  serializers.py  urls.py  views.py
racoonsmeal-backend/src/apps/users/migrations/: 0001_initial.py  0002_alter_userprofile_activity_level.py  0002_alter_userprofile_profile_picture.py  0003_alter_userprofile_activity_level.py  0004_alter_userprofile_bio.py  0005_alter_userprofile_bio.py
racoonsmeal-backend/src/config/: db.sqlite3
racoonsmeal-backend/src/config/settings/: base.py  local.py  prod.py
